1451: pane layout: ensure checkboxes are all visible on linux

--- a/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PreferencesDialog.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PreferencesDialog.css
@@ -67,6 +67,7 @@
 
 .paneLayoutTable .gwt-CheckBox {
    margin: 0 0 0 8px;
+   max-height: 18px;
    font-size: 11px;
 }
 
